# pandemic

./: .gitignore  .travis.yml  CMakeLists.txt  Cards.cpp  Cards.h  README.md  application.cpp  application.h  build.cmd  command.h  context.h  handle.h  main.cpp  players.cpp  players.h
Build1_Report/: Report.odt
Final_Report/: .~lock.FinalReport.odt#  FinalReport.odt  uml
command/: cities.cpp  cities.h  command.h  context.h  load.cpp  load.h  place_pawn.cpp  place_pawn.h  reference_card.cpp  reference_card.h  save.cpp  save.h  setup.cpp  setup.h  status.cpp  status.h
controller/: begin.cpp  begin.h  begin_play.cpp  begin_play.h  cities.cpp  cities.h  controller.h  draw_turn.cpp  draw_turn.h  end.cpp  end.h  end_actions.cpp  end_turn.cpp  end_turn.h  infect_turn.cpp  infect_turn.h  load.cpp  load.h  pattern.h  place_pawn.cpp  place_pawn.h  reference_card.cpp  reference_card.h  save.cpp  save.h  setup.cpp  setup.h  status.cpp  status.h
controller/action/: charter_flight_to.cpp  charter_flight_to.h  direct_flight_to.cpp  direct_flight_to.h  discover_cure.cpp  discover_cure.h  drive_to.cpp  drive_to.h  move_player.cpp  move_player.h  play_event.cpp  play_event.h  share_knowledge_from.cpp  share_knowledge_from.h  share_knowledge_to.cpp  share_knowledge_to.h  shuttle_flight_to.cpp  shuttle_flight_to.h  store_event.cpp  store_event.h  treat_disease.cpp  treat_disease.h
controller/editor/: add_cities_to_deck.cpp  add_cities_to_deck.h  add_city.cpp  add_city.h  add_player.cpp  add_player.h  add_to_deck.cpp  add_to_deck.h  create_deck.cpp  create_deck.h  give_role.cpp  give_role.h  infect.cpp  infect.h  move_top_card.cpp  move_top_card.h  place_research_station.cpp  place_research_station.h  set_disease_cube_supply.cpp  set_disease_cube_supply.h  set_research_station_supply.cpp  set_research_station_supply.h  shuffle_deck.cpp  shuffle_deck.h  validate_city_connections.cpp  validate_city_connections.h
controller/view/: cities.cpp  cities.h  players.cpp  players.h  show_deck.cpp  show_deck.h  status.cpp  status.h
data/: default.panmap.txt
model/: cities_model.h  decks_model.h  game_model.h  players_model.h
pattern/: builder.h  decorator.h  director.h  observer.h  strategy.h  subject.h
script/: 2-player.pandemic.txt  3-player.pandemic.txt  4-player.pandemic.txt  bonus-outbreak.pandemic.txt  cities.pandemic.txt  d-heroic.pandemic.txt  d-intro.pandemic.txt  d-standard.pandemic.txt  default.pandemic.txt  example-game.pandemic.txt  play-example.pandemic.txt  setup.pandemic.txt
scripts/: complete.pandemic.txt  default.pandemic.txt  setup.pandemic.txt
state/: board.h  decks.h  map.h  players.h
text/: reference_card.md
view/: cities.cpp  cities.h  players.cpp  players.h  show_deck.cpp  show_deck.h  status.cpp  status.h
